# rustcheck

./: .gitignore  Cargo.toml  Guardfile  Makefile  README.md  example.rs  package.json  rustcheck.rs
src/: lib.rs
